--- a/sass/sidebar.scss
+++ b/sass/sidebar.scss
@@ -24,6 +24,7 @@
 	box-shadow: 0 0 10px black;
 	background-color: white;
 	padding: 20px;
+	vertical-align: top;
 
 	@media screen and (min-width: 800px) {
 	    display: block;
